--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+  <link rel="preload" href="style.css" as="style">
+  <link rel="preload" href="main.js" as="script">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>hello  world</h1>
+<noscript>
+  <!-- anchor linking to external file -->
+  <a href="http://www.mozilla.com/">External Link</a>
+</noscript>
+<p>Rocks!</p>
 </body>
 </html>
